[package]
name = "ddns6"
version = "0.1.0"
authors = ["Yuxiang Zhu <vfreex@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"


[profile.release]
# https://github.com/johnthagen/min-sized-rust
panic = 'abort'
opt-level = 'z'  # Optimize for size.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1
incremental = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.3"
futures = "0.3.1"
async-trait = "0.1.24"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.6", default-features = true, features = ["rt-core", "process", "time"] }
hyper = { version = "0.13.1", default-features = true, features = ["runtime", "stream"] }
hyper-tls = "0.4.0"
native-tls = "0.2.3"
toml = "0.5.5"
base64 = "0.11.0"
tower = "0.3.1"
openssl = { version = "0.10", features = ["vendored"] }